--- a/src/Integration/Resources/Strings.resx
+++ b/src/Integration/Resources/Strings.resx
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!--
-    Microsoft ResX Schema
-
+  <!-- 
+    Microsoft ResX Schema 
+    
     Version 2.0
-
-    The primary goals of this format is to allow a simple XML format
-    that is mostly human readable. The generation and parsing of the
-    various data types are done through the TypeConverter classes
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
     associated with the data types.
-
+    
     Example:
-
+    
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-
-    There are any number of "resheader" rows that contain simple
+                
+    There are any number of "resheader" rows that contain simple 
     name/value pairs.
-
-    Each data row contains a name, and value. The row also contains a
-    type or mimetype. Type corresponds to a .NET class that support
-    text/value conversion through the TypeConverter architecture.
-    Classes that don't support this are serialized and stored with the
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
     mimetype set.
-
-    The mimetype is used for serialized objects, and tells the
-    ResXResourceReader how to depersist the object. This is currently not
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
     extensible. For a given mimetype the value must be set accordingly:
-
-    Note - application/x-microsoft.net.object.binary.base64 is the format
-    that the ResXResourceWriter will generate, however the reader can
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
     read any of the formats listed below.
-
+    
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-
+    
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array
+    value   : The object must be serialized into a byte array 
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -154,7 +154,7 @@
     <comment>Input label for password when connecting to a SonarQube server</comment>
   </data>
   <data name="InvalidServerUriFormat" xml:space="preserve">
-    <value>"{0}" is not a valid URL</value>
+    <value>'{0}' is not a valid URL</value>
     <comment>Server URI validator error message, formatted. {0} - invalid input string</comment>
   </data>
   <data name="SonarQubeServerLabel" xml:space="preserve">
@@ -218,11 +218,11 @@ Localization note: '[try again]()' is a special markup used to translate the tex
     <comment>Display message</comment>
   </data>
   <data name="QualityProfileDownloadFailedMessageFormat" xml:space="preserve">
-    <value>Failed to download quality profile, Name: "{0}", Key: "{1}", Language: "{2}"</value>
+    <value>Failed to download quality profile. Name: '{0}', Key: '{1}', Language: '{2}'</value>
     <comment>Output window message indicating the quality profile file failed to download. {0} quality profile name, {1} quality profile key, {2} language name.</comment>
   </data>
   <data name="QualityProfileDownloadSuccessfulMessageFormat" xml:space="preserve">
-    <value>Successfully downloaded quality profile, Name: "{0}", Key: "{1}", Language: "{2}"</value>
+    <value>Successfully downloaded quality profile. Name: '{0}', Key: '{1}', Language: '{2}'</value>
     <comment>Output window message indicating the quality profile file was successfully downloaded. {0} quality profile name, {1} quality profile key, {2} language name.</comment>
   </data>
   <data name="RuleSetDescription" xml:space="preserve">
@@ -266,7 +266,7 @@ Localization note: '[try again]()' is a special markup used to translate the tex
     <comment>A progress notification message</comment>
   </data>
   <data name="EnsuringNugetPackagesProgressMessage" xml:space="preserve">
-    <value>Installing NuGet package {0} for project: {1}</value>
+    <value>Installing NuGet package '{0}' for project '{1}'</value>
     <comment>A progress notification message. {0} nuget package id, {1} project name</comment>
   </data>
   <data name="FailedDuringNuGetPackageInstall" xml:space="preserve">
@@ -386,11 +386,11 @@ Localization note: '[Don't warn me again]()' is a special markup used to transla
     <comment>Name of the ShowServerNuGetTrustWarning setting</comment>
   </data>
   <data name="CannotCompareVersionStrings" xml:space="preserve">
-    <value>A SonarQube server plugin has a malformed version and cannot be compared. Version was "{0}".</value>
+    <value>A SonarQube server plugin has a malformed version and cannot be compared. Version was '{0}'.</value>
     <comment>Exception message indicating that the provided version string is malformed and cannot be compared. {0} version string</comment>
   </data>
   <data name="ServerHasNoSupportedPluginVersion" xml:space="preserve">
-    <value>The specified server does not have the minimum required version of any of the supported plugins installed. Please contact your SonarQube server administrator.</value>
+    <value>The specified SonarQube server does not have the minimum required version of any of the supported plugins (C#, VB.Net). </value>
     <comment>Error message indicating that the server does not have the required version of any of the supported server plugins.</comment>
   </data>
   <data name="FailedToUnpackAdditionalFiles" xml:space="preserve">
@@ -661,7 +661,7 @@ This is the general format to use when writing errors to output window or when t
     <comment>Output window message format. Used whenever the message should be displayed as a sub-message from a step message so the user can clearly identify the grouping. {0} the actual message to display.</comment>
   </data>
   <data name="MinimumSupportedServerPlugin" xml:space="preserve">
-    <value>Language: "{0}", Minimum version: "{1}"</value>
+    <value>Language: '{0}', Minimum version: '{1}'</value>
     <comment>Error message displayed for every supported plugin when none of them match the minimum required version. {0} the plugin language name, {1} the plugin minimum version.</comment>
   </data>
   <data name="DetectingServerPlugins" xml:space="preserve">
@@ -669,15 +669,15 @@ This is the general format to use when writing errors to output window or when t
     <comment>Output window message printed before accessing to server plugins.</comment>
   </data>
   <data name="OnlySupportedPluginHasNoProjectInSolution" xml:space="preserve">
-    <value>Only found a {0} plugin supported but no {0} project</value>
+    <value>This SonarQube server only supported plugin language ({0}) does not match any of this solution projects' languages.</value>
     <comment>Output window message printed when the only supported plugin has no matching project types in the current solution. {0} the name of the language.</comment>
   </data>
   <data name="SolutionContainsNoSupportedProject" xml:space="preserve">
-    <value>The solution contains no supported project</value>
+    <value>This solution contains no supported project language (C#, VB.Net). Please create at least one project of the supported language and then try to reconnect.</value>
     <comment>Output window message printed when some server plugin are supported but the current solution contains no supported project (based on project type GUID).</comment>
   </data>
   <data name="BindingProjectLanguageNotMatchingAnyQualityProfileLanguage" xml:space="preserve">
-    <value>Project "{0}" language is not matching any available quality profile language</value>
+    <value>Language for project '{0}' is not matching any of the available quality profile's languages</value>
     <comment>Output window message displayed when the project language matches no quality profile language. {0} the project name.</comment>
   </data>
   <data name="SuccessfullyInstalledNugetPackageForProject" xml:space="preserve">
@@ -685,11 +685,11 @@ This is the general format to use when writing errors to output window or when t
     <comment>Output window message displayed when a nuget package has successfully been installed for a project. {0} The nuget package name. {1} the project name.</comment>
   </data>
   <data name="SupportedPluginFoundMessage" xml:space="preserve">
-    <value>Found a supported plugin, {0}</value>
+    <value>Discovered a supported plugin: {0}</value>
     <comment>Output window message displayed when the server plugin respects the minimum version requirements. {0} the plugin ToString() message.</comment>
   </data>
   <data name="UnsupportedPluginFoundMessage" xml:space="preserve">
-    <value>Found an unsupported plugin, {0}</value>
+    <value>Discovered an unsupported plugin: {0}</value>
     <comment>Output window message displayed when the server plugin doesn't respect the minimum version requirements. {0} the plugin ToString() message.</comment>
   </data>
   <data name="SonarQubeRuleSetNameFormat" xml:space="preserve">
