--- a/src/Integration/Resources/Strings.resx
+++ b/src/Integration/Resources/Strings.resx
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
-    Microsoft ResX Schema 
-    
+  <!--
+    Microsoft ResX Schema
+
     Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
+
+    The primary goals of this format is to allow a simple XML format
+    that is mostly human readable. The generation and parsing of the
+    various data types are done through the TypeConverter classes
     associated with the data types.
-    
+
     Example:
-    
+
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-                
-    There are any number of "resheader" rows that contain simple 
+
+    There are any number of "resheader" rows that contain simple
     name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
+
+    Each data row contains a name, and value. The row also contains a
+    type or mimetype. Type corresponds to a .NET class that support
+    text/value conversion through the TypeConverter architecture.
+    Classes that don't support this are serialized and stored with the
     mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
+
+    The mimetype is used for serialized objects, and tells the
+    ResXResourceReader how to depersist the object. This is currently not
     extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
+
+    Note - application/x-microsoft.net.object.binary.base64 is the format
+    that the ResXResourceWriter will generate, however the reader can
     read any of the formats listed below.
-    
+
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-    
+
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
+    value   : The object must be serialized into a byte array
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -614,31 +614,31 @@ This is the general format to use when writing errors to output window or when t
   </data>
   <data name="SonarLintProfileCheck" xml:space="preserve">
     <value>Checking if SonarQube Quality profile has changed.</value>
-    <comment>Ouput window message</comment>
+    <comment>Output window message</comment>
   </data>
   <data name="SonarLintProfileCheckDifferentProfile" xml:space="preserve">
     <value>The SonarQube project is using a different Quality Profile. Update is required.</value>
-    <comment>Ouput window message</comment>
+    <comment>Output window message</comment>
   </data>
   <data name="SonarLintProfileCheckFailed" xml:space="preserve">
     <value>Unexpected failure getting quality profile information. Automatic quality profile update will not be performed.</value>
-    <comment>Ouput window message</comment>
+    <comment>Output window message</comment>
   </data>
   <data name="SonarLintProfileCheckNoProfiles" xml:space="preserve">
     <value>The binding information is out of date. Update is required.</value>
-    <comment>Ouput window message</comment>
+    <comment>Output window message</comment>
   </data>
   <data name="SonarLintProfileCheckProfileUpdated" xml:space="preserve">
     <value>The Quality Profile for the SonarQube project has changed. Update is required.</value>
-    <comment>Ouput window message</comment>
+    <comment>Output window message</comment>
   </data>
   <data name="SonarLintProfileCheckQualityProfileIsUpToDate" xml:space="preserve">
     <value>Quality Profile is up-to-date.</value>
-    <comment>Ouput window message</comment>
+    <comment>Output window message</comment>
   </data>
   <data name="SonarLintProfileCheckSolutionRequiresMoreProfiles" xml:space="preserve">
     <value>The solution has changed and now requires additional Quality Profiles to be included. Update is required.</value>
-    <comment>Ouput window message</comment>
+    <comment>Output window message</comment>
   </data>
   <data name="SonarLintInfoBarOldBindingFile" xml:space="preserve">
     <value>SonarLint can now tell you when the quality profile in SonarQube project is updated. Press Update to enable this feature now.</value>
